--- a/styles.css
+++ b/styles.css
@@ -547,7 +547,7 @@
         text-align: center;
         color: var(--hovercolor);
         translate: 50%, 50%;
-        content: "currently unavailable for mobile devices.";
+        content: "currently unavailable for mobile devices :/";
     }
 
 }
@@ -655,7 +655,7 @@
     }
 }
 
-@media only screen and (pointer: coarse) and (min-width: 320px) and (max-width: 812px) and (orientation: landscape) {
+@media (pointer: coarse) and (orientation: landscape) {
   .html {
     transform: rotate(-90deg);
     transform-origin: left top;
