--- a/styles.css
+++ b/styles.css
@@ -547,7 +547,7 @@
         text-align: center;
         color: var(--hovercolor);
         translate: 50%, 50%;
-        content: "currently unavailable for mobile devices :/";
+        content: "currently unavailable for mobile devices :)";
     }
 
 }
@@ -654,6 +654,14 @@
         border-radius: 3rem 0 0 0;
     }
 }
+
+@media (pointer: coarse) and (orientation: landscape) {
+    html {
+
+        orientation: portrait;
+
+    }
+  }
 
 
 
