--- a/styles.css
+++ b/styles.css
@@ -547,7 +547,7 @@
         text-align: center;
         color: var(--hovercolor);
         translate: 50%, 50%;
-        content: "currently unavailable for mobile devices :/";
+        content: "unavailable on mobile :333";
     }
 
 }
